--- a/helpers/bootstrap/pom.xml
+++ b/helpers/bootstrap/pom.xml
@@ -17,6 +17,12 @@
     <dependencies>           
         <dependency>
             <groupId>com.intuit.karate</groupId>
+            <artifactId>karate-robot</artifactId>
+            <version>${karate.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.intuit.karate</groupId>
             <artifactId>karate-junit5</artifactId>
             <version>${karate.version}</version>
             <scope>test</scope>
